[tool.poetry]
name = "repl_nix_krislikesfinal"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
tweepy = "^4.10.1"
pygelbooru = "^0.5.0"
Flask = "^2.2.2"
"discord.py" = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
